--- a/front/src/components/common.css
+++ b/front/src/components/common.css
@@ -17,6 +17,8 @@
   }
   
 
+
+  /*image à gauche du texte*/
   
   .text-image-container {
     display: flex;
@@ -59,6 +61,10 @@
         width: 50%; /* L'image prend toute la largeur sur mobile */
         max-width: none; /* Supprime la limite de largeur */
     }
+
+    .text-content {
+      line-height: 1.5;
+  }
 }
 
  
@@ -204,6 +210,11 @@
   @media (max-width: 600px) {
     .video-frame {
       width: 100%;
+    }
+
+    .video-container {
+      padding:0;
+
     }
   
 
