--- a/front/src/components/liens-ext.css
+++ b/front/src/components/liens-ext.css
@@ -23,7 +23,6 @@
 body.dark-mode .link-block{
   background-color :#1e1e1e;
   box-shadow: 0 4px 6px rgba(178, 178, 178, 0.1), 0 1px 3px rgba(178, 178, 178, 0.08);
-  flex: 1 1 calc(33.333% - 20px); /* Ajustement pour 3 colonnes */
 }
   
   @media (max-width: 1000px) {
